--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -13,6 +13,10 @@
                     </div>
                 </div>
 
+                <!-- if products empty then display a message -->
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No Products found.
+                </div>
             </div>
         </div>
     </div>
