Product - Shopping cart status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,14 +21,14 @@
         <div class="container-fluid">
           <div class="header-wrap">
 
+            <!-- search bar -->
             <app-search></app-search>
-            
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span></div>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
+            <!-- END search bar -->
+
+            <!-- cart -->
+            <app-cart-status></app-cart-status>
+            <!-- END cart -->
+
           </div>
           <div class="account-wrap"></div>
         </div>
