--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -15,7 +15,7 @@
                         </a>
 
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD'}}</div>
-                        <a href="#" class="primary-btn">Add to Cart</a>
+                        <button (click)="addToCard(tempProduct)" class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
 
