--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -4,7 +4,7 @@
         <img src="{{ product.imageUrl }}" class="detail-img">
         <h3>{{product.name}}</h3>
         <div class="price">{{product.unitPrice | currency:'USD'}}</div>
-        <a href="#" class="primary-btn">Add to cart</a>
+        <button (click)="addToCart(product)" class="btn btn-primary btn-sm">Add to Cart</button>
 
         <hr>
         <h4>Description</h4>
