--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -1,13 +1,60 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
         <div class="container-fluid">
-            <table class="table table-bordered">
-                <tr>
-                    <th width="20%">Product Image</th>
-                    <th width="50%">Product Detail</th>
-                    <th width="30%"></th>
-                </tr>
-            </table>
+            <div *ngIf="cartItems.length > 0">
+                <table class="table table-bordered">
+                    <tr>
+                        <th width="20%">Product Image</th>
+                        <th width="50%">Product Detail</th>
+                        <th width="30%"></th>
+                    </tr>
+                    <tr *ngFor="let tempCart of cartItems">
+                        <td> 
+                            <img src="{{tempCart.imageUrl}}" class="img-responsive" width="150">
+                        </td>
+                        <td>
+                            <p>{{ tempCart.name}}</p>
+                            <p>{{ tempCart.unitPrice | currency:'USD'}}</p>
+                        </td>
+                        <td>
+                            <div class="items">
+                                <label>Quantity:</label> 
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button (click)="incrementQuantity(tempCart)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col ml-4 mr-2">
+                                        {{tempCart.quantity}}
+                                    </div>
+                                    <div class="col">
+                                        <button (click)="decrementQuantity(tempCart)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col-8"></div>
+                                </div>
+                            </div>
+                            
+                            <button (click)="remove(tempCart)" class="btn btn-primary btn-sm mt-2">Remove</button>
+                            <p class="mt-2">Subtotal: {{ tempCart.quantity * tempCart.unitPrice | currency:'USD'}}</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"></td>
+                        <td style="font-weight: bold">
+                            <p>Total Quantity: {{ totalQuantity }}</p>
+                            <p>Shipping: FREE</p>
+                            <p>Total Price: {{ totalPrice | currency:'USD'}}</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <!-- if cart is empty then display a message  -->
+            <div *ngIf="cartItems.length == 0" class="alert alert-warning col-md-12" role="alert">
+                Your Shopping Cart is empty !
+            </div>
         </div>
     </div>
 </div>
