Add checkout layout,form

--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -48,6 +48,9 @@
                             <p>Total Quantity: {{ totalQuantity }}</p>
                             <p>Shipping: FREE</p>
                             <p>Total Price: {{ totalPrice | currency:'USD'}}</p>
+                            <p>
+                                <a routerLink="/checkout" class="btn btn-primary">checkout</a>
+                            </p>
                         </td>
                     </tr>
                 </table>
