Checkout Form - service

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -227,7 +227,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="ExpirationMonth">
-                                    <option>To Do</option>
+                                    <option *ngFor="let month of creditCardMonths">
+                                        {{ month }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -239,7 +241,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="ExpirationYear">
-                                    <option>To Do</option>
+                                    <option *ngFor="let year of creditCardYears">
+                                        {{ year }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
