--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -86,6 +86,12 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry.invalid && (shippingAddressCountry.dirty || shippingAddressCountry.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCountry.errors.required">
+                                        Shipping Address Country is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -96,6 +102,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+
+                                <div *ngIf="shippingAddressStreet.invalid && (shippingAddressStreet.dirty || shippingAddressStreet.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressStreet.errors.required || shippingAddressStreet.errors.notOnlyWhitespace">
+                                        Shipping Address Street is required.
+                                    </div>
+
+                                    <div *ngIf="shippingAddressStreet.errors.minlength">
+                                        Shipping Address Street must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -106,6 +122,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+
+                                <div *ngIf="shippingAddressCity.invalid && (shippingAddressCity.dirty || shippingAddressCity.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressCity.errors.required || shippingAddressCity.errors.notOnlyWhitespace">
+                                        Shipping Address City is required.
+                                    </div>
+
+                                    <div *ngIf="shippingAddressCity.errors.minlength">
+                                        Shipping Address City must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -121,6 +147,12 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressState.invalid && (shippingAddressState.dirty || shippingAddressState.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressState.errors.required">
+                                        Shipping Address State is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -132,6 +164,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+
+                                <div *ngIf="shippingAddressZipCode.invalid && (shippingAddressZipCode.dirty || shippingAddressZipCode.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="shippingAddressZipCode.errors.required || shippingAddressZipCode.errors.notOnlyWhitespace">
+                                        Shipping Address Zip Code is required.
+                                    </div>
+
+                                    <div *ngIf="shippingAddressZipCode.errors.minlength">
+                                        Shipping Address Zip Code must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -161,6 +203,12 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressCountry.invalid && (billingAddressCountry.dirty || billingAddressCountry.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCountry.errors.required">
+                                        Billing Address Country is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -171,6 +219,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+
+                                <div *ngIf="billingAddressStreet.invalid && (billingAddressStreet.dirty || billingAddressStreet.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressStreet.errors.required || billingAddressStreet.errors.notOnlyWhitespace">
+                                        Billing Address Street is required.
+                                    </div>
+
+                                    <div *ngIf="billingAddressStreet.errors.minlength">
+                                        Billing Address Street must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -181,6 +239,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+
+                                <div *ngIf="billingAddressCity.invalid && (billingAddressCity.dirty || billingAddressCity.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressCity.errors.required || billingAddressCity.errors.notOnlyWhitespace">
+                                        Billing Address City is required.
+                                    </div>
+
+                                    <div *ngIf="billingAddressCity.errors.minlength">
+                                        Billing Address City must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -195,6 +263,11 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="billingAddressState.invalid && (billingAddressState.dirty || billingAddressState.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressState.errors.required">
+                                        Billing Address State is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -205,6 +278,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+
+                                <div *ngIf="billingAddressZipCode.invalid && (billingAddressZipCode.dirty || billingAddressZipCode.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressZipCode.errors.required || billingAddressZipCode.errors.notOnlyWhitespace">
+                                        Billing Address Zip Code is required.
+                                    </div>
+
+                                    <div *ngIf="billingAddressZipCode.errors.minlength">
+                                        Billing Address Zip Code must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -225,6 +308,12 @@
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+
+                                <div *ngIf="creditCardType.invalid && (creditCardType.dirty || creditCardType.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardType.errors.required">
+                                        Credit Card Type Code is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -235,6 +324,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
+
+                                <div *ngIf="nameOnCard.invalid && (nameOnCard.dirty || nameOnCard.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="nameOnCard.errors.required || nameOnCard.errors.notOnlyWhitespace">
+                                        Name On Card is required.
+                                    </div>
+
+                                    <div *ngIf="nameOnCard.errors.minlength">
+                                        Name On Card must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -245,6 +344,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
+
+                                <div *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="cardNumber.errors.required">
+                                        Card Number is required.
+                                    </div>
+
+                                    <div *ngIf="cardNumber.errors.pattern">
+                                        Card Number must be 16 digits long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -255,6 +364,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+
+                                <div *ngIf="securityCode.invalid && (securityCode.dirty || securityCode.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="securityCode.errors.required">
+                                        Security Code is required.
+                                    </div>
+
+                                    <div *ngIf="securityCode.errors.pattern">
+                                        Security Code must be 3 digits long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
