Security - login/logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
             <app-search></app-search>
             <!-- END search bar -->
 
+            <app-login-status></app-login-status>
+
             <!-- cart -->
             <app-cart-status></app-cart-status>
             <!-- END cart -->
